--- a/public/css/admin_index.css
+++ b/public/css/admin_index.css
@@ -13,85 +13,33 @@ h2{
 	position: absolute;
 	text-align: center;
 	color: rgba(255,255,255,0.6);
-	margin-top: 16px;
-	padding-bottom: 5px;
-	width: 100%;
-	border-bottom: solid 1px white;
+	margin-top: 1vh;
+	padding-bottom: 2vh;
+	width: 88vw;
+	border-bottom: solid 0.1vh white;
+	font-size: 5vh;
 }
 
-h3{
+main {
+	display: inline-block;
+	vertical-align: top;
 	position: absolute;
-	top: 98px;
-	text-align: center;
-	color: rgba(255,255,255,0.6);
-	margin-top: 16px;
-	width: 100%;
+	width: 88vw;
 }
 
-label{
-	color: rgba(255,255,255,0.7);
-	font-size: bold;
-}
-
-form{
-	position: absolute;
-	top: 70px;
-	left: 37%;
-}
-
-input{
-	background-color: #333333;
-	border: solid 1px #333333;
-	border-radius: 8px;
-	color: white;
-	font-weight: bold;
-	height: 30px;
-	width: 200px;
-}
-
-input:hover{
-    border: none;
-}
-input:not(:hover){
-    border: none;
-}
-
-button{
-	border: none;
-	list-style-type: none;
-	border-radius: 50px;
-	background-color: rgba(255,255,255,0.8);
-	height: 30px;
-	color: black;
-	width: 130px;
-	line-height: 30px;
-	font-weight: bold;
-	font-size: 15px;
-}
-button:hover{
-	background-color: rgba(115,71,254,0.6);
-	cursor: pointer;
-	color: rgba(255,255,255,0.8);
-}
-
-div{
-	position: absolute;
+main :not(h2) {
+	max-width: 85vw;
+	max-height: 56vh;
 	overflow: auto;
-	max-height: 60%;
-	top: 150px;
-	left: 15%;
 }
 
-table{
-	color: rgba(255,255,255,0.7);
-	border-collapse : collapse;
-	min-width: 60%;
-	text-align: center;
-
+main :not(*) {
+	margin: 8vh;
 }
+
 td{
-	padding: 6px;
-	border: solid 1px rgba(255,255,255,0.2);
+	padding: 0.5vh;
+	border: solid 0.1vh rgba(255,255,255,0.2);
 }
 
 tr:nth-child(odd) {
@@ -102,82 +50,212 @@ tr:nth-child(even) {
   background-color: #141414;
 }
 
-#Exo_style select{
+button{
+	border: none;
+	list-style-type: none;
+	border-radius: 50vh;
+	background-color: rgba(255,255,255,0.8);
+	height: 3vh;
+	color: black;
+	width: 13vh;
+	line-height: 3vh;
+	font-weight: bold;
+	font-size: 2vh;
+}
+button:hover{
+	background-color: rgba(115,71,254,0.6);
+	cursor: pointer;
+	color: rgba(255,255,255,0.8);
+}
+
+label{
+	color: rgba(255,255,255,0.7);
+	font-weight: bold;
+	font-size: 2.5vh;
+}
+
+input{
+	background-color: #333333;
+	border: solid 0.1vh #333333;
+	border-radius: 3vh;
+	color: white;
+	font-weight: bold;
+	height: 3vh;
+	width: 20vw;
+}
+
+input:hover{
+    border: none;
+}
+input:not(:hover){
+    border: none;
+}
+
+form {
+	margin: 1.5vh 1vw 1.5vh 1vw;
+	text-align: center;
+}
+
+a{
+	text-decoration: none;
+	color: black;
+	display: block;
+}
+a:hover{
+	color: white;
+}
+
+img{
+	max-height: 90vh;
+	max-width: 90vw;
+	margin: 2vh 24vw;
+	border: solid 1vh rgba(255,255,255,0.4);
+	border-radius: 2vh;
+}
+
+iframe{
+	height: 100vh;
+	width: 80vw;
+	margin: 8vh 4vw;
+	border: solid 1vh rgba(0,0,0,0.4);
+	background-color:  rgba(255,255,255,0.7);
+	border-radius: 2vh;
+}
+
+div	{
+	display: flex;
+	flex-direction: column;
+	margin: 3vh;
+	height: 50vh;
+}
+
+select{
 	appearance: none;
 	border: none;
-	width: 200px;
-	height: 60px
-	font-weight 30px;
-	border-radius: 30px;
+	width: 20vw;
+	height: 2.8vh;
+	border-radius: 3vh;
 	background-color: #333333;
 	color: white;
 	text-align: center;
 }
 
-#Exo_style div{
-	position: absolute;
-		top: 50px;
-		right: 30px;
-	bottom: 600px;
-	display: flex;
-	flex-direction: column;
-	overflow: inherit;
-	max-height: inherit;
-	max-width: inherit;
-	margin: 10px;
-}
-
-#Exo_style div div{
-	flex-direction: row;
-	position: relative;
-	width: 400px;
-}
-
-#Exo_style input{
-	height: 20px;
-}
-
-#Exo_style button{
-	position: absolute;
-	top: 380px;
-	left: 100px;
-}
-
-#inserernouveau{
-	position: relative;
-	left: 100px;
-	top: 100px;
-}
-
-#contactMessage{
-	min-width: 1070px;
+.td_contact_message{
+	min-width: 62vw;
 }
 
 
-#tableauStats {
-	border: 0 none;
+.form_add_exercise label{
+	margin: 1.2vh;
+}
+.form_add_exercise button{
+	margin-top: 4vh;
+	margin-left: 37vw;
 }
 
-#tableauStats td{
-	border: 0 none;
-	background-color: #232323;
-	border-bottom: solid 1px white;
-	padding: 20px 30px 5px 30px; 
-	font-size: 20px;
-	width: 36vw;
+.tr_title td{
+	background-color: #2c203b;
 }
 
-#statsTitle{
-	text-decoration: underline;
-	font-size: 32px;
-	top: 60px;
+.select_refprefixetel{
+	width: 4vw;
 }
 
-#modifyClient{
-	position: relative;
-	top: 0px;
-	left: 0px;
-	display: flex;
-	flex-direction: column;
+.label_space{
+	margin: 1.8vh;
+}
+
+.button_update_exercice{
+	margin-top: 4vh;
+	margin-left: 37vw; 
+}
+
+.button_update_user{
+	margin-left: 37vw; 
+	margin-top: 4ch;
+}
+
+.label_space_usr_prfl{
+	margin: 0.4vh;
+}
+
+.table_giant{
+	color: rgba(255,255,255,0.7);
+	border-collapse : collapse;
 	text-align: center;
+	margin: 0 8vh 0 8vh;
+	font-size: 2.14vh;
+
+}
+
+.presentation_message{
+	text-decoration: underline;
+	color: rgba(255,255,255,0.7);
+	text-align: center;
+	margin-top: 12vh;
+	font-size: 3.5vh;
+}
+
+.success_message{
+	color: green;
+	text-align: center;
+	margin: 4vh 0 4vh 0;
+	font-size: 3vh;
+}
+
+.error_message{
+	color: red;
+	text-align: center;
+	margin: 4vh 0 4vh 0;
+	font-size: 3vh;
+}
+
+.index_stats td{
+	border: 0;
+	background-color: #232323;
+	border-bottom: solid 0.1vh rgba(255,255,255,0.8);
+	padding: 4vh 3vw 0.2vh 3vw;
+	width: 36vw;
+	font-size: 2.9vh;
+}
+
+.invs_table{ /*arriere plan boutton tableau*/
+	background-color: #232323;
+	border-collapse: inherit;
+	border: none;
+	margin: 0;
+}
+
+.form_delete_message{
+	text-align: center;
+	margin: 20vh;
+}
+
+.table_show_exercice{
+	color: rgba(255,255,255,0.7);
+	border-collapse : collapse;
+	text-align: center;
+	margin: 3vh 31vw;
+	font-size: 2.14vh;
+}
+
+.td_description{
+	min-width: 15vw;
+}
+
+.table_show_materiel{
+	color: rgba(255,255,255,0.7);
+	border-collapse : collapse;
+	text-align: center;
+	margin: 4vh 32vw;
+	font-size: 2.1vh;
+}
+
+.td_nommateriel{
+	min-width: 15vw;
+}
+
+.button_ressource{
+	margin-left: 35vw;
+	margin-right: 5vw;
 }
