--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,15 +1,15 @@
 /* Général ----------------------------------------------------------------------------------------------------------------- */
 
 *{
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	font-family: "Gill Sans", sans-serif;
-	max-width: 1320px;
+
 	transition: 0.5s ease;
 }
 
 .divpartie{ /* taille des div représentant les parties */
-	height: 1020px;
+	height: 168vh;
 }
 
 a{
@@ -20,17 +20,16 @@ a{
 
 #partie1{
 	background: white url("../images/background_pink.png") top left no-repeat;
+	background-size: cover;
 }
 
 #partie1 div{
 	position: absolute;
-	top: 180px;
+	top: 23vh;
     color: rgba(0,0,0,0.8);
     font-weight: bold;
-    font-size: 25px;
-    text-align: justify;
-    text-justify: inter-word;
-    padding: 50px;
+    font-size: 4vh;
+    padding: 5vh;
 }
 
 #partie1 span{
@@ -38,27 +37,27 @@ a{
 }
 
 #partie1 div div{
-	padding-left: 30px;
-	padding-top: 150px;
-	max-width: 550px;
+	padding-left: 3vw;
+	padding-top: 30vh;
+	max-width: 45vw;
 }
 
 #partie1 p{
-	padding: 20px;
+	padding: 3vh;
 }
 
 .imageronde{ /* Style pour les images rondes */
 	position: absolute;
     border-radius:50%;
-    width:400px;
-    height:400px;
-    border: solid 1px rgba(255,255,255,0.8);
+    width:70vh;
+    height:70vh;
+    border: solid 0.1vh rgba(255,255,255,0.8);
     z-index: 10;
 }
 
 #partie1 img{
-	top: 430px;
-    left: 700px;
+	top: 69vh;
+    left: 55vw;
 }
 
 #partie1 div{
@@ -67,26 +66,27 @@ a{
 }
 
 #partie1 #styleimg1{
-	height: 450px;
-	width: 450px;
+	height: 75vh;
+	width: 75vh;
     background-color: rgba(0,0,0,0.5);
-    top: 390px;
-    left: 665px;
+    top: 64vh;
+    left: 52vw;
 
 }
 #partie1 #styleimg2{
-	height: 420px;
-	width: 420px;
+	height: 69vh;
+	width: 69vh;
     background-color: rgba(255,255,255,0.2);
-    top: 410px;
-    left: 675px;
+    top: 66vh;
+    left: 52.5vw;
 }
 
 /* Partie 2 ----------------------------------------------------------------------------------------------------------------- */
 
 #partie2{
 	background: white url("../images/background_grey.png") top left no-repeat;
-	border-bottom: solid 1px black;
+	border-bottom: solid 0.1vh black;
+	background-size: cover;
 }
 
 /* Intermédiaire partie 1 et partie 2 */
@@ -94,8 +94,8 @@ a{
 #partie2 > div{
 	display: flex;
 	position: relative; /* Permet de chevaucher la partie 1 */
-	bottom: 60px;
-	left: 120px;
+	bottom: 11vh;
+	left: 11vw;
 
 }
 #partie2 div div{
@@ -106,14 +106,15 @@ a{
 
 #partie2 div div img{
 	position: relative;
-	left: 45px;
-	height: 120px;
-	width: 120px;
+	left: 2vw;
+	height: 21vh;
+	width: 21vh;
 
 }
 #partie2 div div h3{
 	color: rgba(255,255,255,0.8);
-	max-width: 210px;
+	max-width: 14vw;
+	font-size: 3vh;
 	text-align: center;
 } 
 
@@ -133,40 +134,40 @@ a{
 
 #partie2 #corps #bandeau1 img{
 	position: relative;
-	top: 40px;
-	left: 50px;
-    width:350px;
-    height:350px;
+	top: 8vh;
+	left: 2vw;
+    width:52vh;
+    height:52vh;
 }
 
 #partie2 #corps #bandeau1 h3{
-	top: 120px;
-	left: 180px;
+	top: 18vh;
+	left: 18vw;
 }
 
 #partie2 #corps #bandeau2 img{
 	position: relative;
-	top: 30px;
-	left: 600px;
-    width:350px;
-    height:350px;
+	top: 20vh;
+	left: 50vw;
+    width:52vh;
+    height:52vh;
 }
 
 #partie2 #corps #bandeau2 h3{
-	top: 120px;
-	right: 400px;
+	top: 30vh;
+	right: 30vw;
 }
 
 #partie2 #corps h3{
-	max-width: 500px;
+	max-width: 40vw;
 	position: relative;
-	line-height: 25px;
-	font-size: 20px;
+	line-height: 4.5vh;
+	font-size: 3.5vh;
 	text-align: center;
 }
 
 #partie2 #corps a{
-  font-size: 30px;
+  font-size: 5vh;
 
 }
 #partie2 #corps a:hover{
@@ -180,10 +181,10 @@ a{
 
 #partie2 h1{
 	position: relative;
-	top: 108px;
+	top: 24.5vh;
 	text-align: center;
 	color: rgba(255,255,255,0.8);
-	font-size: 80px;
+	font-size: 14vh;
 	font-weight: bold;
 }
 
@@ -191,9 +192,10 @@ a{
 
 #partie3{
 	background: white url("../images/background_pink.png") top left no-repeat;
+	background-size: cover;
 	display: flex;
-    padding: 2px;
-    height: 950px;
+    padding: 0.2vh;
+    height: 140vh;
 }
 
 #partie3 a:hover{
@@ -205,27 +207,28 @@ a{
 }
 
 #partie3 div div{
-	margin: 15px;
-    padding: 10px;
+	margin: 2.7vh;
+    padding: 1.7vh;
 }
 
 #partie3 > div {
-    border-radius: 50px;
+    border-radius: 8vh;
     background-color: rgba(0,0,0,0.6);
     text-align: center;
     color: rgba(255,255,255,0.8);
-    border: solid 1px rgba(255,255,255,0.8);
-    margin: 15px;
-    margin-top: 90px; 
-    padding: 30px;
-    font-size: 25px;
-    max-height: 640px;
+    border: solid 0.1vh rgba(255,255,255,0.8);
+    margin: 1.5vh;
+    margin-top: 12vh; 
+    padding: 5vh;
+    font-size: 4.2vh;
+    max-height: 100vh;
+    min-width: 20vw;
 }
 
 #partie3 h3 {
 	position: relative;
     color: #f40d42;
-    font-size: 39px;
+    font-size: 5vh;
 }
 
 /* Lien Contact */
@@ -236,8 +239,6 @@ a{
 	flex: inherit;
 	text-align: center;
 	position: absolute;
-	bottom: -1700px;
-	left: 180px;
 }
 
 #partie3 h2 a:hover{
