--- a/public/css/inscription_style.css
+++ b/public/css/inscription_style.css
@@ -3,89 +3,12 @@
     font-family: "Gill Sans", sans-serif;
     transition: all 0.5s ease;
 }
-/* Header ------------------------------------*/
-#linelogo{
-    white-space: nowrap;
-}
-
-#logo{
-    font-size: 48px;
-    font-weight: bold;
-    background: -webkit-linear-gradient(#f40d42, white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    position: relative;
-}
-
-.haltlogo{
-    height: 40px;
-    position: relative;
-}
-
-body header div{
-    height: 110px;
-    width: 100%;
-    background-color: rgba(0,0,0,0.55);
-    position: fixed;
-    border-bottom: solid 1px rgba(255,255,255,0.8);
-    z-index: 11;
-}
-
-body header nav{
-    position: fixed;
-        width: 100%;
-    z-index: 11;
-}
-
-body header nav ul{
-    display: flex;
-}
-
-body header nav ul li{
-    flex-direction: row;
-    height: 70px;
-    flex: 1 1 auto;
-    text-align: center;
-    line-height: 70px;
-    list-style-type: none;
-    border-radius: 10px;
-    margin: 8px;
-    padding: 10px;
-
-}
-
-body header nav ul li:hover{
-    transition-duration: 0.5s;
-    background-color: rgba(255,255,255,0.15);
-}
-
-body header nav ul li:not(:hover){
-    transition-duration: 0.5s;
-}
-
-body header nav ul li a{
-    text-decoration: none;
-    color: rgba(255,255,255,0.7);
-    font-size: 27px;
-    display: block;
-
-}
-
-#header{
-    transition: 0.5s ease;
-}
-
-
-.divpartie{
-    height: 1020px;
-}
 /* Inscription ------------------------------------------------------*/
 html, body, h1, form, fieldset, input
 {
 margin: 0; padding: 0; border: none;
 }
 body {
-font-family: Helvetica, Arial, sans-serif; font-size: 12px;
   padding: 0px;
   background: #f40d42;
   background: -o-linear-gradient(-135deg, #f40d42, #f40d42);
@@ -94,23 +17,11 @@ font-family: Helvetica, Arial, sans-serif; font-size: 12px;
   background: contain;
 }
 main {
-    width: 50%;
+    width: 5%;
 }
-#registration {
-    color: #fff;
-    background-color: rgba(0,0,0,0.8);
-     border-radius: 50px;
-     margin: 10px;
-     width: 900px;
-     line-height: 30px;
-     }
 
- #registration a {
-      color: #8c910b;
-      text-shadow: 0px -1px 0px #000;
-      }
 
-#registration fieldset {
+fieldset {
       padding: 20px;
       }
       fieldset, label {
@@ -120,14 +31,21 @@ main {
       }
 #divTel {
 display: inline-flex;
-width: 100px;
+width: 40px;
 }
 #prefixeTel {
+display: inline-block;
+width: 10vw;
+}
+#refprefixetel {
     display: inline-block;
+width: 10vw;
+}
+#tel {
+    width: 10vw;
 }
 
 fieldset {
- padding:0 20px 20px 20px;
  margin-bottom:10px;
  border:1px solid #DF3F3F;
  }
@@ -137,10 +55,8 @@ legend {
  }
 label {
  margin-top:10px;
- display:block;
  }
 label.inline {
- display:inline;
  margin-right:50px;
  }
 input, textarea, select, option {
@@ -150,7 +66,6 @@ input, textarea, select {
  padding:3px;
  border:1px solid #F5C5C5;
  border-radius:5px;
- width:300px;
  box-shadow:1px 1px 2px #C0C0C0 inset;
  }
 select {
@@ -160,10 +75,11 @@ input[type=checkbox] {
  background-color:transparent;
  border:none;
  width:10px;
+ margin-left: 10vw;
  }
-input[type=submit] {
+button {
  width:100px;
- margin-left:5px;
+ margin-left:6.5vw;
  cursor:pointer;
  }
  div {
@@ -175,9 +91,6 @@ input[type=submit] {
     display: inline-flex;
     padding: 10px;
     line-height: 20px;
- }
-  menu {
-    display: inline-grid;
  }
  #acceptTerms {
     text-align: center;
@@ -200,23 +113,25 @@ height: 50px;
 width: 150px;
 
 }
-
-
-/* -------------------------- */
-footer {
-    background-color: rgba(0,0,0,0.5);
-    text-align: center;
-    border: solid 1px black;
-    border-color: white;
-    color: white;
-    margin: 15px;
-    padding: 2px;
+form {
+    width: 25vw;
 }
+
+.bottom-link {
+
+margin: 20px;
+
+}
+
+/* -------- RESPONSIVE --------- */
 main {
     display: flex;
     flex: 1 1 auto;
     margin: 15px;
     padding: 2px;
+    width: 60vw;
+    margin-left: 20vw;
+    background: white;
 }
 a {
   outline: none;
@@ -231,16 +146,6 @@ a:not(:hover){
 article {
     margin: 15px;
     padding: 10px;
-}
-menu {
-    border-radius: 50px;
-    background-color: rgba(0,0,0,0.8);
-    text-align: center;
-    color: #ffffff;
-    border: solid 2px black;
-    border-color: #f40d42;
-    margin: 15px;
-    padding: 30px;
 }
 h3 {
     color: #f40d42;
