--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,6 @@
 	margin: 0px;
 	padding: 0px;
 	font-family: "Gill Sans", sans-serif;
-	max-width: 1320px;
 	transition: 0.5s ease;
 }
 
@@ -14,7 +13,7 @@ a{
 /* Header ----------------------------------------------------------------------------------------------------------------- */
 
 header #logo{ /* Structure du logo du site */
-	font-size: 48px;
+	font-size: 7vh;
 	font-weight: bold;
     background: -webkit-linear-gradient(#f40d42, white);
     -webkit-background-clip: text;
@@ -23,21 +22,21 @@ header #logo{ /* Structure du logo du site */
 }
 
 header img{
-	height: 40px;
+	height: 6vh;
 }
 
 header div{
-	height: 110px;
-	width: 100%;
+	height: 17.5vh;
+	width: 100vw;
 	background-color: rgba(0,0,0,0.55);
 	position: fixed;
-	border-bottom: solid 1px rgba(255,255,255,0.8); 
+	border-bottom: solid 0.1vh rgba(255,255,255,0.8); 
 	z-index: 11; /* Passer au premier plan */
 }
 
 header nav{
 	position: fixed;
-        width: 100%;
+        width: 100vw;
     z-index: 11;
 }
 
@@ -48,16 +47,16 @@ header ul{
 header ul li{
 	flex-direction: row;
 	flex: 1 1 auto;
-	height: 70px;
-	line-height: 70px;
+	height: 11.5vh;
+	line-height: 11.5vh;
 	text-align: center;
 	list-style-type: none; /* Enlever les points de liste */
-	border-radius: 10px;
-	margin: 8px;
-	padding: 10px;
+	border-radius: 3vh;
+	margin: 1.3vh;
+	padding: 1.4vh;
 	display: block; /* entièreté du bouton cliquable */
 	color: rgba(255,255,255,0.7);
-	font-size: 27px;
+	font-size: 4vh;
 }
 
 header ul li:hover{
@@ -73,47 +72,48 @@ header nav li a{
 /* Footer ----------------------------------------------------------------------------------------------------------------- */
 
 footer{
-	border-top: solid 1px black;
-	height: 800px;
-	line-height: 50px;
+	border-top: solid 0.1vh black;
+	height: 100vh;
+	line-height: 9vh;
 	background-color: rgba(0,0,0,0.9);
-	width: 100%;
+	width: 100vw;
 }
 
 footer h1{
 	position: relative;
-	bottom: 25px;
+	bottom: 4.5vh;
 	text-align: center;
 	color: rgba(255,255,255,0.8);
-	font-size: 80px;
+	font-size: 14vh;
 	font-weight: bold;
 }
 
 footer div{
 	text-align: center;
 	color: rgba(255,255,255,0.8);
-	padding: 20px;
+	padding: 2.8vh;
 }
 
 footer h3{
-	padding-top: 70px;
-	line-height: 30px;
+	padding-top: 8vh;
+	line-height: 4vh;
 	color: rgba(255,255,255,0.8);
   	font-weight: bold;
-  	max-width: 800px;
+  	max-width: 70vw;
     text-align:center;
     	margin:0 auto;
+    font-size: 3.5vh;
 }
 
 footer input{
-	margin-top: 50px; 
+	margin-top: 4vh; 
 	background-color: #202020;
-	border: solid 1px #202020;
-	border-radius: 8px;
+	border: solid 0.1vh #202020;
+	border-radius: 2vh;
 	color: white;
 	font-weight: bold;
-	height: 30px;
-	width: 460px;
+	height: 5vh;
+	width: 36vw;
 }
 
 footer input:hover{
@@ -125,50 +125,50 @@ input:not(:hover){
 
 footer textarea{
 	position: relative;
-	bottom: 40px;
+	bottom: 6.5vh;
 	background-color: #202020;
-	border: solid 1px #202020;
-	border-radius: 10px;
+	border: solid 0.1vh #202020;
+	border-radius: 2vh;
 	color: white;
-	height: 150px;
-	width: 500px;
-	max-width: 500px;
-	min-width: 500px;
-	max-height: 150px;
-	min-height: 150px;
+	height: 22vh;
+	width: 39vw;
+	max-width: 39vw;
+	min-width: 39vw;
+	max-height: 22vh;
+	min-height: 22vh;
+
 }
 
 footer button{
 	border: none;
 	list-style-type: none;
-	border-radius: 50px;
+	border-radius: 8vh;
 	background-color: rgba(255,255,255,0.8);
-	height: 50px;
+	height: 5vh;
 	color: black;
 	display: block;
-	width: 250px;
+	width: 18vw;
 	text-align: center;
 		margin:0 auto;
-		margin-top: 50px;
-	line-height: 50px;
+		margin-top: 5vh;
+	line-height: 5vh;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 3vh;
+	margin-top: 1vh;
 }
+
 footer button:hover{
 	background-color: #f40d42;
 	cursor: pointer;
 }
 
 footer h2{
-	margin-top: 40px;
+	margin-top: 8vh;
 	text-align: center;
 	color: #e20d42;
   	font-weight: bold;
+  	margin-top: 2vh;
+  	font-size: 5vh;
 }
 
-footer p{
-	font-size: 40px;
-	margin-top: 200px;
-	margin-bottom: 170px;
-	color: green;
-}
+
