--- a/public/css/admin_index.css
+++ b/public/css/admin_index.css
@@ -173,6 +173,11 @@ span button:hover{
 .form_add_exercise label{
 	margin: 1.2vh;
 }
+
+.form_update_exercise label{
+	margin: 1.2vh;
+}
+
 .form_add_exercise button{
 	margin-top: 4vh;
 	margin-left: 37vw;
@@ -298,4 +303,28 @@ span button:hover{
 .button_ressource{
 	margin-left: 35vw;
 	margin-right: 5vw;
+}
+
+.table_show_exercice_training{
+	color: rgba(255,255,255,0.7);
+	border-collapse : collapse;
+	text-align: center;
+	margin: 3vh 25vw;
+	font-size: 2.14vh;
+}
+
+.label_update_exercise_training{
+	margin: 1.5vh -3vw;
+}
+
+.button_update_exercice_training{
+	margin: 3vh 37vw;
+}
+
+.label_add_exercise_training{
+	margin: 1.5vh -3vw;
+}
+
+.button_add_exercice_training{
+	margin: 3vh 37vw;
 }
