--- a/public/css/pagemembre_index_style.css
+++ b/public/css/pagemembre_index_style.css
@@ -1,10 +1,21 @@
+/*            Digital-font for numbers             */
+@font-face{
+ font-family:'digital-clock-font';
+ src: url('digital-7.ttf');
+}
+
 section {
   padding: 20px;
   margin-left: 25vw;
-  border: solid 1px white;
+  border: 0px;
+  border-radius: 5px;
   width: 50%;
- background-color:#403e3d;
- text-align: center;
+  background-color:#403e3d;
+  text-align: center;
+}
+
+.main-index {
+min-height: 65vh;
 }
 
 h3 {
@@ -13,4 +24,17 @@ h3 {
 
 section>p {
   color: white;
+  line-height: 22px;
+}
+
+.digital-font {
+    font-family: 'digital-clock-font', sans-serif;
+    font-size: 300%;
+}
+
+.li-infos {
+  color: white;
+  line-height: 22px;
+  text-align: justify;
+  margin-top: 10px;
 }
